--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "chasm",
-  "version": "1.0.2",
+  "version": "1.2.0",
   "engines": {
     "node": "*"
   },
-  "description": "Module to asynchronously determine port availability.",
+  "description": "Module to asynchronously determine UNIX socket and port availabilities.",
   "main": "./api.js",
   "scripts": {
     "test": "node ./test.js"
@@ -16,7 +16,8 @@
   "keywords": [
     "async",
     "asynchronous",
-    "availabile",
+    "available",
+    "availabilities",
     "availability",
     "chasm",
     "free",
@@ -25,6 +26,8 @@
     "network",
     "open",
     "port",
+    "socket",
+    "unix",
     "unused",
     "used"
   ],
