--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chasm",
   "version": "1.2.0",
   "engines": {
-    "node": "*"
+    "node": ">=0.11.x"
   },
   "description": "Module to asynchronously determine UNIX socket and port availabilities.",
   "main": "./api.js",
