--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chasm",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "engines": {
-    "node": ">=0.11.x"
+    "node": "*"
   },
   "description": "Module to asynchronously determine UNIX socket and port availabilities.",
   "main": "./api.js",
