--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chasm",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "engines": {
     "node": "*"
   },
@@ -26,6 +26,7 @@
     "network",
     "open",
     "port",
+    "random",
     "socket",
     "unix",
     "unused",
